--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css" />
-    <title>Document</title> 
+    <title>ThunderStorm</title> 
 </head>
 <body>
-    
+    <div class="header"></div>
+    <div class="intro"></div>
+    <div class="features"></div>
+    <div class="quote"></div>
+    <div class="subscription"></div>
+    <div class="footer"></div>
 </body>
 </html>
