Add lessons learned, add all content to index.html
Three lessons learned added
All content added to webpage. It's a small page, so one commit should be
fine after the boilerplate. Content includes divs

--- a/index.html
+++ b/index.html
@@ -7,11 +7,56 @@
     <title>ThunderStorm</title> 
 </head>
 <body>
-    <div class="header"></div>
-    <div class="intro"></div>
-    <div class="features"></div>
-    <div class="quote"></div>
-    <div class="subscription"></div>
-    <div class="footer"></div>
+    <div class="header">
+        <img src="./images/thunder.jpg" alt="Header Logo" class="logo">
+        <div class="header-links">
+            <ul>
+                <li><a href="#">Link One</a></li>
+                <li><a href="#">Link Two</a></li>
+                <li><a href="#">Link Three</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="intro">
+        <div class="awesome">
+            <div class="company-title">ThunderStorm</div>
+            <div class="company-subtitle">a company that specializes in helping others learn how to network.</div>
+            <button class="sign-up">Sign up</button>
+        </div>
+        <img class="computer" src="./images/computer.jpg" alt="image of a computer" />
+    </div>
+    <div class="features">
+        <div class="header-features">Networking happens everywhere</div>
+        <div class="container">
+            <div class="card">
+                <img src="./images/grey-meeting.jpg" alt="people meeting in greyscale" />
+                shady parking structures
+            </div>
+            <div class="card">
+                <img src="./images/meeting.jpg" alt="people meeting in open space" />
+                in the middle of a busy station
+            </div>
+            <div class="card">
+                <img src="./images/hi-five.jpg" alt="people meeting in home office" />
+                with your spouse
+            </div>
+            <div class="card">
+                <img src="./images/meeting-desk.jpg" alt="people meeting on desk" />
+                at work
+            </div>
+        </div>
+    </div>
+    <div class="quote">
+        <div class="text">"You can have everything in life you want if you will just help enough other people get what they want."</div>
+        <div class="author">Zig Ziglar</div>
+    </div>
+    <div class="subscription">
+        <div class="sub-left side">
+            <div class="sub-header">Call to action! It's time!</div>
+            <div class="sub-text">Sign up for our product by clicking that button over there!</div>
+        </div>
+        <button class="sign-up">Sign up</button>
+    </div>
+    <div class="footer">Copyright © Josue Quinones 2023</div>
 </body>
 </html>
