rename intro div to hero

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </ul>
         </div>
     </div>
-    <div class="intro">
-        <div class="awesome">
+    <div class="hero">
+        <div class="intro">
             <div class="company-title">ThunderStorm</div>
             <div class="company-subtitle">a company that specializes in helping others learn how to network.</div>
             <button class="sign-up">Sign up</button>
