rename subscription div to subscribe div

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="text">"You can have everything in life you want if you will just help enough other people get what they want."</div>
         <div class="author">Zig Ziglar</div>
     </div>
-    <div class="subscription">
+    <div class="subscribe">
         <div class="sub-left side">
             <div class="sub-header">Call to action! It's time!</div>
             <div class="sub-text">Sign up for our product by clicking that button over there!</div>
