--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="./images/thunder.jpg" alt="Header Logo" class="logo">
+        <div class="header-logo">Header Logo</div>
         <div class="header-links">
             <ul>
                 <li><a href="#">Link One</a></li>
