fix hero formatting
Header and hero match spec

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </div>
     <div class="hero">
         <div class="intro">
-            <div class="company-title">ThunderStorm</div>
-            <div class="company-subtitle">a company that specializes in helping others learn how to network.</div>
+            <div class="company-title">ThunderStorm, an awesome company</div>
+            <div class="company-subtitle">with a website with subtext. The subtext helps to describe the company. This company specializes in helping others learn about networking.</div>
             <button class="sign-up">Sign up</button>
         </div>
         <img class="computer" src="./images/computer.jpg" alt="image of a computer" />
