--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class="header-logo">Header Logo</div>
         <div class="header-links">
             <ul>
-                <li><a href="#">Link One</a></li>
-                <li><a href="#">Link Two</a></li>
-                <li><a href="#">Link Three</a></li>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>
         </div>
     </div>
@@ -30,19 +30,19 @@
         <div class="container">
             <div class="card">
                 <img src="./images/grey-meeting.jpg" alt="people meeting in greyscale" />
-                shady parking structures
+                this is some subtext under an illustration or image
             </div>
             <div class="card">
                 <img src="./images/meeting.jpg" alt="people meeting in open space" />
-                in the middle of a busy station
+                this is some subtext under an illustration or image
             </div>
             <div class="card">
                 <img src="./images/hi-five.jpg" alt="people meeting in home office" />
-                with your spouse
+                this is some subtext under an illustration or image
             </div>
             <div class="card">
                 <img src="./images/meeting-desk.jpg" alt="people meeting on desk" />
-                at work
+                this is some subtext under an illustration or image
             </div>
         </div>
     </div>
