change filler space for quote to match spec

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </div>
     </div>
     <div class="quote">
-        <div class="text">"You can have everything in life you want if you will just help enough other people get what they want."</div>
-        <div class="author">Zig Ziglar</div>
+        <div class="text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actualy read it. Who knows? All I know is that it looks nice.</div>
+        <div class="author">-Thor, God of Thunder</div>
     </div>
     <div class="subscribe">
         <div class="sub-left side">
