--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img class="computer" src="./images/computer.jpg" alt="image of a computer" />
     </div>
     <div class="features">
-        <div class="header-features">Networking happens everywhere</div>
+        <div class="random-information">Networking happens everywhere</div>
         <div class="container">
             <div class="card">
                 <img src="./images/grey-meeting.jpg" alt="people meeting in greyscale" />
